--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY='django-insecure-+i3-(i6h()94pp9d=bo3&68w#(acfi42%y7!rpr9%598l*^b0b'
 DEBUG=True
-DB_NAME='guide_db'
+DB_NAME='cult_guide_db'
 DB_USER='cholponklv'
 DB_PORT='5432'
 DB_HOST='localhost'
